# FimicsPlayer

./: .gitignore  .gitmodules  README.md  build.gradle  build_depends.gradle  build_model.gradle  common.gradle  depends.gradle  gradle.properties  settings.gradle
demo-sample/: CMakeLists.txt  CMakeLists.txt.in  build.gradle
demo-sample/cpp/: Hello.cpp
demo-sample/src/androidTest/java/com/mic/training/db/: SqliteTest.java
demo-sample/src/androidTest/java/com/mic/training/okhttp3/: DownLoad.java  OkHttpTest.java
demo-sample/src/androidTest/java/com/mic/training/retrofit/: FRetrofitTest.java  RetrofitTest.java
demo-sample/src/androidTest/java/com/mic/xsample/: ExampleInstrumentedTest.java
demo-sample/src/androidTest/java/com/mic/xsample/db/: SqliteTest.java
demo-sample/src/androidTest/java/com/mic/xsample/okhttp3/: CacheInterceptor.java  DownLoad.java  OkHttpTest.java  UploadFileTest.java
demo-sample/src/androidTest/java/com/mic/xsample/retrofit/: FRetrofitTest.java  RetrofitTest.java
demo-sample/src/androidTest/java/com/mic/xsample/rx/: LibRxJavaTest.java  RxJavaTest.java
demo-sample/src/main/: AndroidManifest.xml
demo-sample/src/main/aidl/com/mic/training/: UserAidl.aidl
demo-sample/src/main/cpp/: LinkedList.hpp  Structure.cpp
demo-sample/src/main/java/com/mic/training/activity/opensource/: AllOpenSourceActivity.java  GlideActivity.java  HandleActivity.java  OpenSourceItemActivity.java  RxBindingActivity.java  RxBitmapActivity.java  UpdateUIActivity.java
demo-sample/src/main/java/com/mic/training/activity/structure/: NDK.java  StructureActivity.java
demo-sample/src/main/java/com/mic/training/activity/view/: AllViewActivity.java  ViewDrawFlowActivity.java  ViewItemActivity.java
demo-sample/src/main/java/com/mic/training/adapter/: BaseMenuAdapter.java
demo-sample/src/main/java/com/mic/training/fragment/view/: ItemFragment.java  LoadingViewFragment.java  LockPatternViewFragment.java  LoveLayoutFragment.java  MessageBubbleView1Fragment.java  ProgressBarFragment.java  QQSlidingMenuFragment.java  RatingBarFragment.java  TouchViewGroupFragment.java  XTextViewFragment.java
demo-sample/src/main/java/com/mic/training/model/: Fruit.java  Person.java
demo-sample/src/main/java/com/mic/training/service/: FUserApi.java
demo-sample/src/main/java/com/mic/training/utils/: StatusBarUtil.java
demo-sample/src/main/java/com/mic/training/view/: LoveLayout.java  MessageBubbleView.java  TanslationBehavior.java
demo-sample/src/main/java/com/mic/xsample/activity/opensource/: AllOpenSourceActivity.java  GlideActivity.java  HandleActivity.java  OpenSourceItemActivity.java  RxBindingActivity.java  RxBitmapActivity.java  RxPermissionsActivity.java  UpdateUIActivity.java
demo-sample/src/main/java/com/mic/xsample/activity/view/: AllViewActivity.java  BehaviorActivity.java  MyScrollViewActivity.java  NestedActivity.java  StatusBarActivity.java  SwipeActivity.java  (+3 more)
demo-sample/src/main/java/com/mic/xsample/adapter/: FruitAdapter.java
demo-sample/src/main/java/com/mic/xsample/ndk/: NDKTools.java
demo-sample/src/main/java/com/mic/xsample/view/: CircleView.java  ListDataScreenView.java  LoveLayout.java  MessageBubbleView.java  TanslationBehavior.java
demo-sample/src/main/java/com/mic/xsample/xaspect/: CheckAspect.java
demo-sample/src/main/java/com/mic/xsample/xwidget/: TextViewActivity.java
demo-sample/src/main/res/layout/: activity_behavior.xml  activity_handle.xml  activity_my_scrollview.xml  activity_rx_bitmap.xml  activity_structure.xml  content_structure.xml  fragment_love_layout.xml  fragment_swipe.xml
demo-sample/src/main/res/values/: dimens.xml  strings.xml
demo-sample/tests/: HelloWorldTest.cpp  TEST_MAPPING
(+2104 files in other folders)
